[tool.poetry]
name = "bew-converter"
version = "0.1.0"
description = ""
authors = ["Konstantin <k1st.volkov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.95.2"}
sqlalchemy = "^2.0.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
